--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,180 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "      <th>year</th>\n",
+              "      <th>rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Un p’tit truc en plus</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>La Planète des Singes : Le Nouveau Royaume</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Back To Black</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>2.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Frères</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>2.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>The Fall Guy</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40</th>\n",
+              "      <td>La Nuit du 12</td>\n",
+              "      <td>2022</td>\n",
+              "      <td>4.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>41</th>\n",
+              "      <td>Première Affaire</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>42</th>\n",
+              "      <td>L'Idée d'être avec toi</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>43</th>\n",
+              "      <td>Amal - Un esprit libre</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>44</th>\n",
+              "      <td>La Morsure</td>\n",
+              "      <td>2024</td>\n",
+              "      <td>3.2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>90 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                         title  year rating\n",
+              "0                        Un p’tit truc en plus  2024    3.1\n",
+              "1   La Planète des Singes : Le Nouveau Royaume  2024    3.2\n",
+              "2                                Back To Black  2024    2.7\n",
+              "3                                       Frères  2024    2.8\n",
+              "4                                 The Fall Guy  2024    3.4\n",
+              "..                                         ...   ...    ...\n",
+              "40                               La Nuit du 12  2022    4.4\n",
+              "41                            Première Affaire  2024    3.0\n",
+              "42                      L'Idée d'être avec toi  2024    3.3\n",
+              "43                      Amal - Un esprit libre  2024    3.2\n",
+              "44                                  La Morsure  2024    3.2\n",
+              "\n",
+              "[90 rows x 3 columns]"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "\n",
+        "url = 'https://www.allocine.fr/films/'\n",
+        "response = requests.get(url)\n",
+        "soup = BeautifulSoup(response.content, \"html.parser\")\n",
+        "\n",
+        "# cards = soup.find_all(class_='card entity-card entity-card-list cf')\n",
+        "\n",
+        "title_list = []\n",
+        "year_list = []\n",
+        "rating_list = []\n",
+        "runtime_list = []\n",
+        "genre_list = []\n",
+        "\n",
+        "def get_film_info(soup):\n",
+        "    cards_list = soup.find_all(\"div\", class_='card entity-card entity-card-list cf')\n",
+        "    for card in cards_list:\n",
+        "        title =  card.find('a', class_='meta-title-link').text.strip()\n",
+        "        title_list.append(title)\n",
+        "        year = card.find('span', class_='date').text.split()[2]\n",
+        "        year_list.append(year)\n",
+        "        rating = card.find('span', class_='stareval-note').text.replace(\",\", \".\")\n",
+        "        rating_list.append(rating)\n",
+        "    df = pd.DataFrame({\n",
+        "        'title': title_list,\n",
+        "        'year': year_list,\n",
+        "        'rating': rating_list\n",
+        "    })\n",
+        "    return df\n",
+        "\n",
+        "def get_new_page(page_number):\n",
+        "    new_url = url+\"?page=\"+str(page_number)\n",
+        "    response = requests.get(new_url)\n",
+        "    new_soup = BeautifulSoup(response.content, \"html.parser\")\n",
+        "    return new_soup\n",
+        "\n",
+        "\n",
+        "\n",
+        "film_dfs = []\n",
+        "film_dfs = [get_film_info(get_new_page(p)) for p in range(1,4)]\n",
+        "\n",
+        "film_dfs\n",
+        "new_df = pd.concat(film_dfs)\n",
+        "new_df\n"
       ]
     },
     {
@@ -163,6 +329,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +347,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
